--- a/Accueil.html
+++ b/Accueil.html
@@ -88,7 +88,7 @@ img /* logo */
                 </div>
                     <nav>
                         <ul class="menu">
-                            <li><a href="Accueil.html" >Accueil</a></li>
+                            <li><a href="index.html" >Accueil</a></li>
                             <li><a href="Nous.html">A Propos</a></li>
                             <li><a href="Partenaires.html">Nos Partenaires</a></li>
                             <li><a href="Carriere.html">Carrières</a></li>
